[project]
name = "memory-mcp"
version = "0.1.0"
description = "Personal memory layer MCP server over plain markdown files"
readme = "README.md"
authors = [
    { name = "Ujjwal-N", email = "ujjwal.nadhani@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["fastmcp", "python-frontmatter"]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
