[project]
name = "memory-mcp"
version = "0.1.0"
description = "Personal memory layer MCP server over plain markdown files"
readme = "README.md"
authors = [
    { name = "Ujjwal-N", email = "ujjwal.nadhani@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["fastmcp", "python-frontmatter"]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.basedpyright]
typeCheckingMode = "standard"
